--- a/moons.html
+++ b/moons.html
@@ -77,7 +77,7 @@
    
     <div class="grid section-mid">
         <div class="unit pad-t unit-xs-1 unit-s-1 unit-m-1 unit-l-1 h2-space-left">
-            <h2>Discovery of Mars's Moons</h2>
+            <h2>Discovery <span>of Mars's Moons</span></h2>
          </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-4">
             <img class="img-flex gutter pad-b" src="images/discovery-moons.png" alt="telescope used">  
