--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 <body>
 
-<header class="grid grid-middle section-dark masthead pad-t-1-2 pad-b-1-2">
+<ul class="skip-links">
+    <li><a href="#nav">Skip to navigation</a></li>
+    <li><a href="#main">Skip to the main content</a></li>
+    <li><a href="#copyright">Skip to content info</a></li>
+</ul>    
+    
+<header role="banner" id="top" class="grid grid-middle section-dark masthead pad-t-1-2 pad-b-1-2">
   <div class="unit gutter unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
     <h1 class="title peta push-0">Mars</h1>
   </div>
-  <nav class="unit gutter-1-2 unit-xs-1 unit-s-1 unit-m-2-3 unit-l-2-3">
+  <nav role="navigation" id="nav" class="unit gutter-1-2 unit-xs-1 unit-s-1 unit-m-2-3 unit-l-2-3">
     <ul class="nav giga push-0">
       <li><a class="island-1-2" href="index.html">Planet</a></li>
       <li><a class="island-1-2" href="moons.html">Moons</a></li>
@@ -23,7 +29,7 @@
   </nav>
 </header>
 
-<main>
+<main role="main" id="main">
 
   <div class="section-mid intro peta island-1-2 push">
     <p class="push-0">Mars is the fourth planet from the Sun.</p>
@@ -93,7 +99,7 @@
 
 <footer class="grid island-1-2 section-dark">
   <div class="unit micro unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3">
-    <p class="copyright push-0">© 2014 Mars Planetary Consortium</p>
+    <p role="contentinfo" id="copyright" class="copyright push-0">© 2014 Mars Planetary Consortium <a href="top">Top of Page</a></p>
   </div>
   <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-2-3">
     <nav>
