--- a/moons.html
+++ b/moons.html
@@ -13,6 +13,7 @@
 <ul class="skip-links">
     <li><a href="#nav">Skip to navigation</a></li>
     <li><a href="#main">Skip to the main content</a></li>
+    <li><a href="#discovery">Skip to Discovery</a></li>
     <li><a href="#copyright">Skip to content info</a></li>
 </ul>      
     
@@ -81,7 +82,7 @@
     </div>
   </div>
    
-    <div class="grid section-mid">
+    <div id="discovery" class="grid section-mid">
         <div class="unit pad-t unit-xs-1 unit-s-1 unit-m-1 unit-l-1 h2-space-left">
             <h2>Discovery <span>of Mars's Moons</span></h2>
          </div>
